--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "typescript": "3.5.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -32,5 +33,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewire-hot-loader": "^2.0.1",
+    "react-hot-loader": "^4.12.6",
+    "semantic-release-cli": "^5.1.1"
   }
 }
