feat(app): prepare env for developing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": "."
   },
+  "paths": {},
   "include": [
     "src",
     "demo"
