--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-template-editor",
+  "name": "uzum",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
