feat(app): develop a basic editor

--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,8 @@
           ".jsx",
           ".ts",
           ".tsx",
-          ".json"
+          ".json",
+          ".txt"
         ]
       },
       "webpack": {
