--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uzum",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": false,
   "scripts": {
     "start": "node scripts/start.js",
@@ -72,7 +72,11 @@
       "react-app"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "color": "^3.1.2",
+    "jss": "^9.8.7",
+    "jss-preset-default": "^4.5.0"
+  },
   "devDependencies": {
     "@babel/core": "7.4.3",
     "@svgr/webpack": "4.1.0",
