--- a/package.json
+++ b/package.json
@@ -76,7 +76,9 @@
     "color": "^3.1.2",
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
-    "react-jss": "^10.0.0-alpha.22"
+    "lodash": "^4.17.14",
+    "react-jss": "^10.0.0-alpha.22",
+    "react-use": "^9.11.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
