--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "prepublish": "tsc"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -78,7 +84,7 @@
     "jss-preset-default": "^4.5.0",
     "lodash": "^4.17.14",
     "react-jss": "^10.0.0-alpha.22",
-    "react-use": "^9.11.0"
+    "typescript": "3.5.3"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
@@ -140,7 +146,6 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
-    "typescript": "3.5.3",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
