--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,23 +6,26 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
+    "declaration": true,
+    "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
+    "isolatedModules": false,
+    "noEmit": false,
     "jsx": "preserve",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "outDir": "./dist"
   },
   "paths": {},
   "include": [
     "src",
+    "types",
     "demo"
   ]
 }
